--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       dockerfile: ../Dockerfiles/nextjs/Dockerfile
     volumes:
       - ./nextjs-app:/app
+      - /app/node_modules
     environment:
       - WATCHPACK_POLLING=true # ホットリロードを有効化
     ports:
